<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_page_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".ProductActivity">

    <ImageView
        android:id="@+id/product_page_image"
        android:layout_width="0dp"
        android:layout_height="167dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/landing" />

    <TextView
        android:id="@+id/product_page_title"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amiko_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/product_page_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/product_page_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/amiko"
                android:text="@string/product_description"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/product_page_description"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/amiko"
                android:text="Описание"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/amiko"
                android:text="@string/pruduct_price"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/product_page_price"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/amiko"
                android:text="Цена"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/url_button"-->
<!--        android:layout_width="220dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginTop="-50dp"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:paddingTop="10dp"-->
<!--        android:paddingBottom="10dp"-->
<!--        android:text="Посмотреть пример"-->
<!--        app:backgroundTint="#FC5130"-->
<!--        app:cornerRadius="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.496"-->
<!--        app:layout_constraintStart_toEndOf="@+id/constraintLayout2"-->
<!--        app:layout_constraintTop_toTopOf="@+id/order_button" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/order_button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="AddToOrder"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Добавить в корзину"
        app:backgroundTint="#FC5130"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout2" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/main"
        android:backgroundTint="@android:color/transparent"
        android:onClick="openMenu"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:background="@color/main_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/main"
            android:layout_width="120dp"
            android:layout_height="115dp"
            android:fontFamily="@font/amiko"
            android:gravity="center"
            android:onClick="openMain"
            android:text="@string/main_text"
            android:textColor="@color/main"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.297" />

        <TextView
            android:id="@+id/about"
            android:layout_width="120dp"
            android:layout_height="115dp"
            android:fontFamily="@font/amiko"
            android:gravity="center"
            android:onClick="openOrder"
            android:text="@string/order_text"
            android:textColor="@color/main"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contacts"
            android:layout_width="120dp"
            android:layout_height="115dp"
            android:fontFamily="@font/amiko"
            android:gravity="center"
            android:text="@string/contacts_text"
            android:textColor="@color/main"
            android:onClick="openContacts"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>